Breakdown: - Added classnames and id like a psycho - Fixed theme changer size on tinnie res - Broke ContactForm into smaller imported elements - Moved Slider and other elements into directory nest hell - Created bug report structure - Broke the bug reports elements into tinnier modules as well - Adjusted light and dark theme colors for smoother view, same as shadowboxes - Feedback form looks slightly better as well

--- a/src/components/styles/ThemeChanger.css
+++ b/src/components/styles/ThemeChanger.css
@@ -15,3 +15,11 @@
     background-color: black;
     border-color: white;
 }
+
+@media (max-width: 995px) {
+    .ThemeChanger-LightTheme,
+    .ThemeChanger-DarkTheme {
+        max-height: 6vw;
+        max-width: 6vw;
+    }
+}
