--- a/src/pages/contact/styles/Contact.css
+++ b/src/pages/contact/styles/Contact.css
@@ -62,7 +62,8 @@
 }
 
 .contact-form-selector {
-    justify-content: center;
+    justify-content: flex-start;
+    margin-left: 3vw;
     display: flex;
 }
 
